deploy/app.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapp-in
  labels:
    app: fastapp-in
  annotations:
    cert-manager.io/cluster-issuer: selfsigned-issuer
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
    - hosts:
      - test.example.com
      secretName: fastapp-tls
  rules:
  - host: test.example.com
    http:
      paths:
      - backend:
          service:
            name: fastapp-lb
            port:
              number: 80
        path: /(ok|load)
        pathType: Prefix

---
apiVersion: v1
kind: Service
metadata:
  name: fastapp-lb
  labels:
    app: fastapp-lb
spec:
  ports:
    - port: 80
  selector:
    app: fastapp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fastapp
  labels:
    app: fastapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: fastapp
  template:
    metadata:
      labels:
        app: fastapp
    spec:
      containers:
      - name: fastapp
        image: jesusaur/learn-k8s:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 600m
        livenessProbe:
          exec:
            command:
              - curl
              - --fail
              - http://localhost/ok
          initialDelaySeconds: 15
          periodSeconds: 30
